# tavily-cli

./: .env.example  Dockerfile  LICENSE  README.docker.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  release.yml
docs/: redis-integration.md
examples/: redis_example.py
search_client/: __init__.py  cli.py  logger.py  search.py  storage.py
search_client/storage/: __init__.py  redis.py
tavily_cli/: __init__.py  cli.py  logger.py  search.py
tavily_cli/storage/: __init__.py  base.py  redis.py
tests/: test_cli.py  test_search_cache.py  test_storage.py
tests/search_client/: storage.py
